##Text encoding: utf-8

2011-02-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/mechanism-step.cc: don't add new molecules when undoing a
	mechanism arrow deletion. [#32433]

2011-02-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: new CTfiles loader plugin.
	* plugins/loaders/ctfiles/Makefile.am: ditto.
	* plugins/loaders/ctfiles/ctfiles.cc: ditto.
	* plugins/loaders/ctfiles/plugin.xml.in: ditto.
	* other files: updated copyright.

2011-02-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/paint/main.cc: try to save changed files on crashing.
	* programs/paint/standaloneapp.cc: ditto.
	* programs/paint/standaloneapp.h: ditto.

2011-02-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: request OpenBabel >= 2.3.0.
	* libs/gcp/Makefile.am: export molecules to avogadro and gchem3d.
	* libs/gcp/application.cc: ditto.
	* libs/gcp/application.h: ditto.
	* libs/gcp/molecule.cc: ditto.
	* libs/gcr/atom.cc: fix space group detection with dummy atoms.
	* libs/gcu/application.cc: implement ConvertToCML, GsfIntput version.
	* libs/gcu/macros.h: add a static property macro.

2011-02-05  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: fix automake warning.
	* database/Makefile.am: add new datas.
	* database/databases.xml.in: new list of databases.
	* libs/gccv/brackets.cc: add more sizes. 
	* libs/gcu/application.cc: start work on extern databases.
	* libs/gcu/application.h: ditto.
	* openbabel/socket.cc: implement long option such as --gen3D support.

2011-02-04  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/molecule.cc: implemement standard InChIKey generation.
	* libs/gcp/molecule.h: ditto.
	* libs/gcu/application.cc: new fix in ConvertFromCML.
	* openbabel/socket.cc: work on openbabel options support.

2011-02-03  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/Makefile.am: renamed libgcr to libgcrystal to avoid confusion
	with the cryptography related libgcr.
	* libs/gcr/Makefile.am: ditto.